--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 /* Common start*/
+body {
+  background-color: #f1f1f3;
+}
+h3{
+  margin-bottom: 5px;
+}
 p,
-h1 {
+h1{
   padding: 0;
   margin: 0;
 }
@@ -56,7 +62,7 @@ main {
 /* header end */
 
 /* Future Section Start */
-.card-container{
+.card-container {
   margin: 32px 0 32px 0;
   display: flex;
   gap: 24px;
@@ -71,19 +77,35 @@ main {
   font-size: 16px;
   font-weight: 600;
 }
-.card-1{
-  background: rgba(84, 144, 245, 0.20);
+.card-1 {
+  background: rgba(84, 144, 245, 0.2);
   padding: 32px;
   border-radius: 16px;
 }
-.card-2{
-  background: #C6E4D6;
+.card-2 {
+  background: #c6e4d6;
   padding: 32px;
   border-radius: 16px;
 }
-.card-3{
-  background: #F7EBCF;
+.card-3 {
+  background: #f7ebcf;
   padding: 24px;
   border-radius: 16px;
 }
 /* Future Section end */
+
+/* quote start */
+.quote {
+  font-size: 16px;
+  font-weight: 400;
+}
+.quote-card {
+  border-radius: 16px;
+  border: 1px solid rgba(14, 14, 14, 0.15);
+  background: #fff;
+  background-image: url(/assets/quote-bg.png);
+  background-position: 24px 24px;
+  background-repeat: no-repeat;
+  padding: 48px 24px;
+}
+/* quote end */
