--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,18 @@
 body {
   background-color: #f1f1f3;
 }
-h3{
+h3 {
   margin-bottom: 5px;
 }
 p,
-h1{
+h1 {
   padding: 0;
   margin: 0;
 }
 h4 {
   margin: 24px 0 12px 0;
 }
-h2 {
+.title-heading {
   margin: 80px 0 24px 0;
   font-size: 40px;
   font-weight: 700;
@@ -109,3 +109,43 @@ main {
   padding: 48px 24px;
 }
 /* quote end */
+
+/* satelite section start */
+.satelite-img {
+  border-radius: 24px;
+}
+.satelite-card,.satelite-card-2,.satelite-card-3 {
+  margin: 32px 0 24px 0;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 48px;
+  border-radius: 24px;
+  gap: 32px;
+}
+.satelite-card-2{
+  flex-direction: row-reverse;
+}
+.satelite-card-heading {
+  font-size: 32px;
+  font-weight: 700;
+  margin: 0 0 12px 0;
+  padding: 0;
+}
+.date{
+  margin-bottom: 12px;
+}
+.satelite-card-btn {
+  margin-top: 32px;
+  border-radius: 8px;
+  background: #006a50;
+  padding: 13px 26px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+}
+.al-jazeera{
+  margin-bottom: 12px;
+}
+/* satelite section end */
