--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,9 @@ main {
 .satelite-img {
   border-radius: 24px;
 }
-.satelite-card,.satelite-card-2,.satelite-card-3 {
+.satelite-card,
+.satelite-card-2,
+.satelite-card-3 {
   margin: 32px 0 24px 0;
   background: #fff;
   display: flex;
@@ -124,7 +126,7 @@ main {
   border-radius: 24px;
   gap: 32px;
 }
-.satelite-card-2{
+.satelite-card-2 {
   flex-direction: row-reverse;
 }
 .satelite-card-heading {
@@ -133,7 +135,7 @@ main {
   margin: 0 0 12px 0;
   padding: 0;
 }
-.date{
+.date {
   margin-bottom: 12px;
 }
 .satelite-card-btn {
@@ -145,7 +147,63 @@ main {
   font-size: 18px;
   font-weight: 600;
 }
-.al-jazeera{
+.al-jazeera {
   margin-bottom: 12px;
 }
 /* satelite section end */
+
+/* donate section start */
+.donate-section {
+  text-align: center;
+}
+.donate-heading {
+  margin-top: 80px;
+  font-size: 40px;
+  font-weight: 700;
+}
+.amount {
+  margin: 0;
+  font-size: 40px;
+  font-weight: 700;
+}
+.taka-btn:hover {
+  background-color: #006a50;
+}
+.taka-btn {
+  padding: 40px;
+  gap: 24px;
+  border-radius: 16px;
+  border: 1px solid rgba(14, 14, 14, 0.15);
+}
+.donate-card {
+  justify-content: center;
+  margin-top: 32px;
+  display: flex;
+  gap: 24px;
+}
+.diff-color {
+  background: #c6e4d6;
+}
+input {
+  border: none;
+  border-bottom: 1px solid rgba(14, 14, 14, 0.15);
+  font-size: 20px;
+  font-weight: 400;
+  color: #0e0e0e4d;
+  margin-top: 32px;
+  background: #fff;
+  text-align: center;
+  width: 900px;
+  padding: 20px 40px;
+}
+.donate-btn {
+  margin: 32px 0 80px 0;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 17px 34px;
+  border-radius: 8px;
+  border: 1px solid rgba(14, 14, 14, 0.1);
+  background: #006a50;
+}
+/* donate section end */
